refactor(ArkDoubaoService): 优化代码结构并使用getFirst方法
- 移除未使用的ConfigurationProperties和Arrays导入
- 将choice.getChoices().get(0)替换为getFirst()方法提高代码可读性
- 保持流式处理的日志记录和内容过滤逻辑